--- a/Scarb.toml
+++ b/Scarb.toml
@@ -1,13 +1,13 @@
 [package]
 name = "briq_protocol"
-version = "2.1.0"
-cairo-version = "2.3.0"
+version = "2.2.0"
+cairo-version = "2.5.4"
 
 [cairo]
 sierra-replace-ids = true
 
 [dependencies]
-token = { git = "https://github.com/dojoengine/origami.git" }
+token = { git = "https://github.com/dojoengine/origami.git", rev="16752c58d8b9cd3ca001282b0b815fd14bb62a9b" }
 
 [tool.dojo.world]
 name = "briq"
@@ -18,6 +18,7 @@ website = "https://briq.construction/"
 socials.x = "https://twitter.com/briqNFT"
 
 [[target.dojo]]
+
 # build-external-contracts = [
 #     'presets::erc1155::erc1155::components::erc_1155_balance',
 #     'presets::erc1155::erc1155::components::operator_approval',
